# treesitter_kind_collector

./: Cargo.toml  README.md  rust-toolchain.toml
asserts/: node-types.json
examples/simplebase/: Cargo.toml
examples/simplebase/src/: main.rs
macro_test/: Cargo.toml
macro_test/src/: main.rs
src/: lib.rs  node_object.rs
