[workspace]
resolver = "2"
members = [".", "./macro_test"]

[package]
name = "treesitter_type_collector"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
